# hacs-permanent-disable-dev-update

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.json  info.md  pyproject.toml  requirements_test.txt
.github/workflows/: release.yml
custom_components/update_blocklist/: __init__.py  api.py  config_flow.py  const.py  identity.py  manifest.json  panel.py  scanner.py  sensor.py  services.py  services.yaml
custom_components/update_blocklist/www/: panel.js
docs/superpowers/plans/: 2026-04-16-update-blocklist.md
frontend/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api-client.test.ts  api-client.ts  update-blocklist-panel.test.ts  update-blocklist-panel.ts
frontend/src/views/: add-block-dialog.test.ts  add-block-dialog.ts  blocks-list.test.ts  blocks-list.ts  rediscovery-prompt.test.ts  rediscovery-prompt.ts  settings-view.test.ts  settings-view.ts
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_identity.py  test_init.py  test_scanner.py  test_sensor.py  test_services.py
